--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "react-native-reanimated": "^1.9.0",
     "react-native-safe-area-context": "^1.0.2",
     "react-native-screens": "^2.8.0",
+    "react-native-simple-toast": "^1.1.2",
     "react-native-unimodules": "~0.9.0",
     "react-native-web": "~0.11.7",
     "react-redux": "^7.2.0",
