--- a/package.json
+++ b/package.json
@@ -17,21 +17,25 @@
     "expo": "~37.0.3",
     "expo-splash-screen": "^0.2.3",
     "expo-updates": "~0.2.0",
-    "react": "~16.9.0",
+    "react": "^16.13.1",
     "react-dom": "~16.9.0",
     "react-native": "~0.61.5",
     "react-native-easy-toast": "^1.2.0",
     "react-native-gesture-handler": "^1.6.1",
+    "react-native-paper": "^3.10.1",
     "react-native-reanimated": "^1.9.0",
     "react-native-safe-area-context": "^1.0.2",
     "react-native-screens": "^2.8.0",
     "react-native-simple-toast": "^1.1.2",
     "react-native-unimodules": "~0.9.0",
+    "react-native-vector-icons": "^6.6.0",
     "react-native-web": "~0.11.7",
     "react-redux": "^7.2.0",
+    "reactotron-react-native": "^5.0.0",
     "redux": "^4.0.5",
     "redux-persist": "^6.0.0",
-    "redux-thunk": "^2.3.0"
+    "redux-thunk": "^2.3.0",
+    "upgrade": "^1.1.0"
   },
   "devDependencies": {
     "@babel/core": "~7.9.0",
