--- a/package.json
+++ b/package.json
@@ -1,5 +1,4 @@
 {
-  "main": "index.js",
   "scripts": {
     "android": "react-native run-android",
     "ios": "react-native run-ios",
@@ -9,30 +8,30 @@
     "postinstall": "rndebugger-open --expo"
   },
   "dependencies": {
+    "expo": "~37.0.3",
+    "expo-splash-screen": "^0.2.3",
+    "expo-updates": "~0.2.0",
+    "react": "~16.9.0",
+    "react-dom": "~16.9.0",
+    "react-native": "~0.61.5",
+    "react-native-gesture-handler": "^1.6.1",
+    "react-native-reanimated": "^1.9.0",
+    "react-native-screens": "^2.8.0",
+    "react-native-unimodules": "~0.9.0",
+    "react-native-web": "~0.11.7",
     "@react-native-community/async-storage": "^1.10.3",
     "@react-native-community/masked-view": "^0.1.10",
     "@react-navigation/drawer": "^5.8.0",
     "@react-navigation/native": "^5.4.2",
     "@react-navigation/stack": "^5.3.9",
     "axios": "^0.19.2",
-    "expo": "~37.0.3",
-    "expo-splash-screen": "^0.2.3",
-    "expo-updates": "~0.2.0",
-    "react": "^16.13.1",
-    "react-dom": "~16.9.0",
-    "react-native": "~0.61.5",
     "react-native-debugger": "^1.1.0",
     "react-native-debugger-open": "^0.3.24",
     "react-native-easy-toast": "^1.2.0",
-    "react-native-gesture-handler": "^1.6.1",
     "react-native-paper": "^3.10.1",
-    "react-native-reanimated": "^1.9.0",
     "react-native-safe-area-context": "^1.0.2",
-    "react-native-screens": "^2.8.0",
     "react-native-simple-toast": "^1.1.2",
-    "react-native-unimodules": "~0.9.0",
     "react-native-vector-icons": "^6.6.0",
-    "react-native-web": "~0.11.7",
     "react-redux": "^7.2.0",
     "reactotron-react-native": "^5.0.0",
     "redux": "^4.0.5",
